# neuro_symbolic_t2g

./: .gitattributes  .gitignore  CLUSTER.md  LICENSE  README.md  TRAINING.md  __init__.py  format.ps1  main.py  pyproject.toml  sync_cluster.ps1
.githooks/: README.md  pre-commit  pre-push
cluster/: aliases.sh  chain_next.sh  clean.sh  clean_model.sh  diagnose.sh  eval.sh  run_all.sh  setup.sh  train.sh
config/: grpo_t2g_qwen05.yaml
docs/: CONFIGS.md  CONFIGS_GUIDE.md  DOCUMENTAZIONE.md  ERRORI_E_MIGLIORIE.md  GRAMMARLLM_CONFRONTO.md  GRAMMARLLM_MIGRAZIONE.md  METRICS.md  RESEARCH_REPORT.md  REWARDS.md  T2G_PIPELINE_REVIEW.md
experiments/configs/t2g/: grpo_experimental_all.yaml  grpo_optimal.yaml  grpo_optimal_old.yaml  grpo_qwen05.yaml  sft.yaml
experiments/configs/t2g/ablation/: grpo_no_grammar.yaml  grpo_no_sft.yaml  grpo_pda.yaml  grpo_pda_lookahead.yaml  grpo_soft_viterbi.yaml  grpo_verifier_scaled.yaml  zero_shot.yaml  zero_shot_grammar.yaml
grammarllm/: .gitignore  README_PACKAGE.md  __init__.py  bug_analysis.md  config.py  generate_with_constraints.py
grammarllm/modules/: .gitignore  BaseStreamer.py  PushdownAutomaton.py  SimpleLogitProcessor_.py  automaton.py  logits_processor.py  lookahead.py  streamer.py
grammarllm/scripts/: generate_LL1_parsing_table.py  grammar_generation.py  map_terminal_tokens.py
grammarllm/utils/: common_regex.py  generation_analysis.py  pydantic_to_grammar.py  score_utils.py  toolbox.py
src/: __init__.py
src/cluster/: aliases.sh  chain_next.sh  clean.sh  clean_model.sh  eval.sh  run_all.sh  setup.sh  train.sh
src/datasets/: __init__.py  aslg_dataset.py  transition_matrix.py
src/grammar/: __init__.py  gloss_grammar.py  grammar_logits_processor.py  masked_mass_tracker.py
src/models/: __init__.py  model_loader.py
src/rewards/: __init__.py  t2g_rewards.py
src/training/: __init__.py  __main__.py  callbacks.py  eval_t2g.py  grpo_t2g_train.py  sft_train.py
src/utils/: __init__.py  ablation_summary.py  chain_monitor.py  config.py  live_training_table.py  metrics.py  prompting.py  show_training_log.py  text_utils.py  visualization.py
tests/: REPORT.md  conftest.py  run_all_tests.sh  test_curriculum.py  test_data.py  test_grammar.py  test_integration.py  test_metrics.py  test_monitor.py  test_rewards.py  validate_configs.py
