[project]
name = "neuro_symbolic_t2g"
version = "0.1.0"
description = "Neuro-symbolic pipeline: Constrained Decoding + GRPO for Text-to-Gloss translation"
requires-python = ">=3.10,<3.13"
authors = [
    { name = "Neuro-Symbolic T2G Team" },
]

dependencies = [
    # Core ML
    "torch",
    "transformers",
    "trl[judges]==0.24.0",
    "mergekit",
    "peft",
    "datasets",
    "accelerate",
    "bitsandbytes",

    # Data & Eval
    "rouge-score>=0.1.2",
    "numpy",
    "scipy",
    "pandas",
    "matplotlib",
    "seaborn",
    "plotnine>=0.14.0",

    # Infra
    "pyyaml",
    "tqdm",
    "wandb",
    "safetensors",
    "python-dotenv",
    "regex",
]

[project.optional-dependencies]
dev = [
    "isort",
    "black[jupyter]",
    "ruff",
    "pytest",
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"


[tool.setuptools.packages.find]
where = ["."]
include = ["grammarllm*", "src*", "neuro_symbolic_t2g*"]

[tool.setuptools.package-dir]
"" = "."

[tool.isort]
profile = "black"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E402", "E501"]
